# solflip-duel-epic-beam-sg13

./: TASK_COMPLETED  package.json  workflow.json  workflow_state.json
app/: globals.css  page.tsx
contracts/solflip/: Anchor.toml
contracts/solflip/programs/solflip/: Cargo.toml
contracts/solflip/programs/solflip/src/: lib.rs
contracts/solflip/tests/: solflip.ts
lib/: solflipClient.ts
response_schemas/: fairness_verifier_agent_response.json  match_insight_agent_response.json  wallet_assistant_agent_response.json
