[package]
name = "solflip"
version = "0.1.0"
description = "SolFlip - 1v1 Coin Flip Duel Arena on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solflip"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
